<resources>
    <string name="app_name">Dollar exchange rate</string>
    <string name="titulo_pantalla">DOLLAR EXCHANGE RATE</string>
    <string name="dolar_oficial">Official Dollar</string>
    <string name="dolar_blue">Blue Dollar</string>
    <string name="dolar_soja">Soybean Dollar</string>
    <string name="dolar_contado_con_liqui">Dollar Cash with Liqui</string>
    <string name="dolar_turista">Tourist Dollar</string>
    <string name="dolar_bolsa">Dollar Stock Exchange</string>
    <string name="historico">Historical</string>
    <string name="recargar">Reload</string>
    <string name="recargando">Reloading the values</string>
    <string name="fecha_posterior">That date has not yet arrived</string>
    <string name="problema_conexion">Could not connect to the internet. Check your connection.</string>
    <string name="error_bbdd">Database error. Please try again later.</string>
    <string name="correcto">Correct</string>
    <string name="cancelar">Cancel</string>
    <string name="fecha_averiguar">Select a date</string>
    <string name="evolucion_ultimos_dias">EVOLUTION OF THE DOLLAR\nIN THE LAST 10 DAYS</string>
</resources>