<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ElegirFecha">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poison"
        android:gravity="center"
        android:text="@string/fecha_averiguar"
        android:textSize="26dp"
        android:layout_weight="2"
        android:textStyle="bold" />

    <DatePicker
        android:id="@+id/simpleDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="6"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="#AF6060"
            android:onClick="cancelado"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/cancelar"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="#AF6060"
            android:onClick="fechaLista"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/correcto"
            android:textColor="@color/black"
            android:textSize="16dp" />

    </LinearLayout>

</LinearLayout>